# CppBOLOS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: Logger.h  grid.h  parser.h  process.h  solver.h  target.h  utilities.h
src/: grid.cpp  parser.cpp  process.cpp  solver.cpp  target.cpp  utilities.cpp
